; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_time_remaining.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_time_remaining.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_NOPTS_VALUE = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, double*)* @time_remaining to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @time_remaining(i32* %0, double* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca double*, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store double* %1, double** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call double @get_time_length(i32* %8)
  store double %9, double* %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call double @get_playback_time(i32* %10)
  store double %11, double* %7, align 8
  %12 = load double, double* %7, align 8
  %13 = load double, double* @MP_NOPTS_VALUE, align 8
  %14 = fcmp oeq double %12, %13
  br i1 %14, label %18, label %15

15:                                               ; preds = %2
  %16 = load double, double* %6, align 8
  %17 = fcmp ole double %16, 0.000000e+00
  br i1 %17, label %18, label %19

18:                                               ; preds = %15, %2
  store i32 0, i32* %3, align 4
  br label %27

19:                                               ; preds = %15
  %20 = load double, double* %6, align 8
  %21 = load double, double* %7, align 8
  %22 = fsub double %20, %21
  %23 = load double*, double** %5, align 8
  store double %22, double* %23, align 8
  %24 = load double, double* %6, align 8
  %25 = fcmp oge double %24, 0.000000e+00
  %26 = zext i1 %25 to i32
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %19, %18
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local double @get_time_length(i32*) #1

declare dso_local double @get_playback_time(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
